src/Surfnet/StepupMiddleware/ManagementBundle/Tests/Validator/Fixtures/invalid_configuration/no_email_templates.php
<?php

return [
    'expectedError' => "Required property 'email_templates' is missing",
    'expectedPropertyPath' => '(root)',
    'configuration' => [
        'gateway' => [],
        'raa' => [],
        'sraa' => [],
    ]
];
